2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/lsacpi.c (options): Add missing terminator.

2012-03-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/datetime.h (grub_datetime2unixtime): Fix handling of days
	after 29th of February.

2012-03-31  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix exfat endianness handling.

	* grub-core/fs/fat.c (grub_fat_data): Make fat_sector 32-bit.
	(grub_fat_mount) [MODE_EXFAT]: Fix bpb.num_reserved_sectors byte-swap.
	(grub_fat_iterate_dir) [MODE_EXFAT]: Fix attr byte-swap.
	Byte-swap utf16 when necessary.
	(grub_fat_label) [MODE_EXFAT]: Byte-swap utf16 when necessary.

2012-03-31  Anton Blanchard  <anton@samba.org>
2012-03-31  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix btrfs endianness handling.

	* grub-core/fs/btrfs.c (key_cmp): Use grub_le_to_cpu for clarity.
	(lower_bound): Make root uint64_t. Use root in le.
	(grub_btrfs_read_logical): Fix template key init. Fix address byteswap.
	(find_path): Fix template key init.
	(grub_btrfs_dir): Fix mtime byteswap.
	* include/grub/types.h (grub_cpu_to_le64_compile_time): New macro.

2012-03-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/btrfs.c (grub_btrfs_read_logical): New argument
	recursion_depth. Break infinite resursions. All users updated.

2012-03-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/getroot.c (convert_system_partition_to_system_disk): Fix use
	after free.
	Reported by: Peter Jones.

2012-03-31  Anton Blanchard  <anton@samba.org>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Do not byteswap
	8 bit values.

2012-03-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-install.in: Fix nvram call for PreP.

2012-03-28  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/diskfilter.c (grub_diskfilter_memberlist): Degrade
	the error when some elements are missing into a warning.

2012-03-28  Vladimir Serbinenko  <phcoder@gmail.com>
